--- a/styles.scss
+++ b/styles.scss
@@ -412,7 +412,8 @@
   justify-content: flex-end;
   z-index: 1;
   -webkit-tap-highlight-color: transparent;
-
+  font-weight: 400;
+  text-decoration: none;
   &.active {
     &::before {
       height: calc(100% + 5px);
@@ -545,7 +546,7 @@
   font-size: 30px;
   margin: 0;
   margin-bottom: 25px;
-
+  font-weight: 400;
   @include breakpoint(mobile) {
     display: none;
   }
@@ -1080,6 +1081,7 @@
 .plant-info__wrapper em {
   font-family: "Selina W08 Calligraphic", sans-serif;
   font-style: normal;
+  font-weight: 400;
 }
 
 .plant-info__main-heading {
@@ -1118,7 +1120,7 @@
 
   @include breakpoint(mobile) {
     min-height: 80px;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 30px;
   }
 }
@@ -1157,7 +1159,7 @@
   object-fit: contain;
 
   @include breakpoint(mobile) {
-    width: 80px;
+    width: 70px;
   }
 }
 
@@ -1167,7 +1169,7 @@
   line-height: 110%;
   margin: 0;
   padding: 0;
-
+  font-weight: 400;
   @include breakpoint(mobile) {
     font-size: 24px;
   }
